AnimiqCore/include/animiq/nativecore/api.h

typedef uint64_t NcAvatarHandle;
typedef enum NcResultCode {
    NC_OK = 0,
    NC_ERROR_NOT_INITIALIZED = 1,
    NC_ERROR_INVALID_ARGUMENT = 2,
    NC_ERROR_IO = 3,
    NC_ERROR_UNSUPPORTED = 4,
    NC_ERROR_INTERNAL = 5
} NcResultCode;
typedef struct NcExpressionInfo {
    char name[64];
    char mapping_kind[32];
    float default_weight;
    float runtime_weight;
    uint32_t bind_count;
} NcExpressionInfo;
typedef struct NcSpringBoneInfo {
    uint32_t present;
    uint32_t spring_count;
    uint32_t joint_count;
    uint32_t collider_count;
    uint32_t collider_group_count;
    uint32_t active_chain_count;
    uint32_t corrected_chain_count;
    uint32_t disabled_chain_count;
    uint32_t unsupported_collider_chain_count;
    float avg_substeps;
} NcSpringBoneInfo;
typedef struct NcAvatarRuntimeMetricsV2 {
    uint32_t spring_active_chain_count;
    uint32_t spring_constraint_hit_count;
    uint32_t spring_damping_event_count;
    float spring_avg_offset_magnitude;
    float spring_peak_offset_magnitude;
    uint32_t mtoon_outline_material_count;
    uint32_t mtoon_uv_anim_material_count;
    uint32_t mtoon_matcap_material_count;
    uint32_t mtoon_blend_material_count;
    uint32_t mtoon_mask_material_count;
    float last_frame_ms;
    float target_frame_ms;
    char physics_solver[32];
    char mtoon_runtime_mode[32];
    int32_t contract_preview_yaw_deg;
    uint32_t transform_confidence_level;
    uint32_t is_vrm_origin_miq;
    uint32_t preview_bounds_excluded_mesh_count;
    uint32_t preview_hair_candidate_mesh_count;
    float preview_hair_head_alignment_score;
} NcAvatarRuntimeMetricsV2;
typedef struct NcTrackingFrame {
    float head_pos[3];
    float head_rot_quat[4];
    float eye_gaze_l[3];
    float eye_gaze_r[3];
    float blink_l;
    float blink_r;
    float mouth_open;
} NcTrackingFrame;
typedef struct NcExpressionWeight {
    char name[64];
    float weight;
} NcExpressionWeight;
typedef enum NcCameraMode {
    NC_CAMERA_MODE_AUTO_FIT_FULL = 0,
    NC_CAMERA_MODE_AUTO_FIT_BUST = 1,
    NC_CAMERA_MODE_MANUAL = 2
} NcCameraMode;
typedef enum NcRenderQualityProfile {
    NC_RENDER_QUALITY_DEFAULT = 0,
    NC_RENDER_QUALITY_BALANCED = 1,
    NC_RENDER_QUALITY_ULTRA_PARITY = 2,
    NC_RENDER_QUALITY_FAST_FALLBACK = 3
} NcRenderQualityProfile;
typedef struct NcRenderQualityOptions {
    NcCameraMode camera_mode;
    float framing_target;
    float headroom;
    float yaw_deg;
    float fov_deg;
    float background_rgba[4];
    uint32_t quality_profile;
    uint32_t show_debug_overlay;
} NcRenderQualityOptions;
typedef struct NcLightingOptions {
    float light_position[3];
    float light_euler_deg[3];
    float intensity;
    float range;
    float spot_angle_deg;
    float inner_spot_angle_deg;
    float shadow_strength;
    float shadow_bias;
    float shadow_normal_bias;
    float shadow_near_plane;
    uint32_t shadow_resolution;
    float ambient_intensity;
    uint32_t enable_sun_light;
    uint32_t enable_shadow;
} NcLightingOptions;
typedef struct NcPoseBoneOffset {
    uint32_t bone_id;
    float pitch_deg;
    float yaw_deg;
    float roll_deg;
} NcPoseBoneOffset;
typedef struct NcSpoutOptions {
    uint32_t width;
    uint32_t height;
    uint32_t fps;
    const char* channel_name;
} NcSpoutOptions;
typedef struct NcSpoutReceiverOptions {
    const char* channel_name;
    uint32_t force_linear;
} NcSpoutReceiverOptions;
typedef struct NcOscOptions {
    uint16_t bind_port;
    const char* publish_address;
} NcOscOptions;
typedef struct NcWindowRenderTarget {
    void* hwnd;
    uint32_t width;
    uint32_t height;
} NcWindowRenderTarget;
typedef struct NcThumbnailRequest {
    NcAvatarHandle handle;
    const char* output_path;
    uint32_t width;
    uint32_t height;
    float delta_time_seconds;
} NcThumbnailRequest;
typedef struct NcRuntimeStats {
    uint32_t render_ready_avatar_count;
    uint32_t spout_active;
    uint32_t osc_active;
    float last_frame_ms;
    float gpu_frame_ms;
    float cpu_frame_ms;
    float material_resolve_ms;
    uint32_t pass_count;
} NcRuntimeStats;
typedef enum NcSpoutBackendKind {
    NC_SPOUT_BACKEND_INACTIVE = 0,
    NC_SPOUT_BACKEND_LEGACY_SHARED_MEMORY = 1,
    NC_SPOUT_BACKEND_SPOUT2_GPU = 2
} NcSpoutBackendKind;
typedef struct NcSpoutDiagnostics {
    uint32_t backend_kind;
    uint32_t strict_mode;
    uint64_t fallback_count;
    char last_error_code[64];
} NcSpoutDiagnostics;
typedef struct NcSpoutReceiverDiagnostics {
    uint32_t active;
    char channel_name[64];
    char last_error_code[64];
} NcSpoutReceiverDiagnostics;
typedef struct NcErrorInfo {
    NcResultCode code;
    char subsystem[32];
    char message[256];
    uint8_t recoverable;
} NcErrorInfo;
ANIMIQ_API NcResultCode nc_get_expression_infos(NcAvatarHandle handle, NcExpressionInfo* out_infos, uint32_t capacity, uint32_t* out_written);
ANIMIQ_API NcResultCode nc_get_springbone_info(NcAvatarHandle handle, NcSpringBoneInfo* out_info);
ANIMIQ_API NcResultCode nc_get_avatar_runtime_metrics_v2(NcAvatarHandle handle, NcAvatarRuntimeMetricsV2* out_info);
ANIMIQ_API NcResultCode nc_set_tracking_frame(const NcTrackingFrame* frame);
ANIMIQ_API NcResultCode nc_set_expression_weights(const NcExpressionWeight* weights, uint32_t count);
ANIMIQ_API NcResultCode nc_create_render_resources(NcAvatarHandle handle);
ANIMIQ_API NcResultCode nc_destroy_render_resources(NcAvatarHandle handle);
ANIMIQ_API NcResultCode nc_create_window_render_target(const NcWindowRenderTarget* target);
ANIMIQ_API NcResultCode nc_resize_window_render_target(const NcWindowRenderTarget* target);
ANIMIQ_API NcResultCode nc_destroy_window_render_target(void* hwnd);
ANIMIQ_API NcResultCode nc_render_frame_to_window(void* hwnd, float delta_time_seconds);
ANIMIQ_API NcResultCode nc_render_avatar_thumbnail_png(const NcThumbnailRequest* request);
ANIMIQ_API NcResultCode nc_set_render_quality_options(const NcRenderQualityOptions* options);
ANIMIQ_API NcResultCode nc_get_render_quality_options(NcRenderQualityOptions* out_options);
ANIMIQ_API NcResultCode nc_set_lighting_options(const NcLightingOptions* options);
ANIMIQ_API NcResultCode nc_get_lighting_options(NcLightingOptions* out_options);
ANIMIQ_API NcResultCode nc_set_pose_offsets(const NcPoseBoneOffset* offsets, uint32_t count);
ANIMIQ_API NcResultCode nc_clear_pose_offsets(void);
ANIMIQ_API NcResultCode nc_start_spout(const NcSpoutOptions* options);
ANIMIQ_API NcResultCode nc_stop_spout(void);
ANIMIQ_API NcResultCode nc_start_spout_receiver(const NcSpoutReceiverOptions* options);
ANIMIQ_API NcResultCode nc_stop_spout_receiver(void);
ANIMIQ_API NcResultCode nc_start_osc(const NcOscOptions* options);
ANIMIQ_API NcResultCode nc_stop_osc(void);
ANIMIQ_API NcResultCode nc_get_last_error(NcErrorInfo* out_error);
ANIMIQ_API NcResultCode nc_get_runtime_stats(NcRuntimeStats* out_stats);
ANIMIQ_API NcResultCode nc_get_spout_diagnostics(NcSpoutDiagnostics* out_diag);
ANIMIQ_API NcResultCode nc_get_spout_receiver_diagnostics(NcSpoutReceiverDiagnostics* out_diag);