AnimiqCore/host/HostCore/NativeCoreInterop.cs


    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_expression_infos(
        ulong handle,
        [Out] NcExpressionInfo[] outInfos,
        uint capacity,
        out uint outWritten);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_springbone_info(ulong handle, out NcSpringBoneInfo outInfo);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_avatar_runtime_metrics_v2(ulong handle, out NcAvatarRuntimeMetricsV2 outInfo);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_set_tracking_frame(ref NcTrackingFrame frame);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_set_expression_weights([In] NcExpressionWeight[] weights, uint count);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_create_render_resources(ulong handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_destroy_render_resources(ulong handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_create_window_render_target(ref NcWindowRenderTarget target);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_resize_window_render_target(ref NcWindowRenderTarget target);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_destroy_window_render_target(IntPtr hwnd);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_render_frame_to_window(IntPtr hwnd, float deltaTimeSeconds);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern NcResultCode nc_render_avatar_thumbnail_png(ref NcThumbnailRequest request);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_set_render_quality_options(ref NcRenderQualityOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_render_quality_options(out NcRenderQualityOptions outOptions);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_set_lighting_options(ref NcLightingOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_lighting_options(out NcLightingOptions outOptions);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_set_pose_offsets([In] NcPoseBoneOffset[] offsets, uint count);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_clear_pose_offsets();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_start_spout(ref NcSpoutOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_stop_spout();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_start_spout_receiver(ref NcSpoutReceiverOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_stop_spout_receiver();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_start_osc(ref NcOscOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_stop_osc();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_last_error(out NcErrorInfo outError);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_runtime_stats(out NcRuntimeStats outStats);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_spout_diagnostics(out NcSpoutDiagnostics outDiag);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_spout_receiver_diagnostics(out NcSpoutReceiverDiagnostics outDiag);

    public static string FormatLastError()
    {
        var rc = nc_get_last_error(out var err);
        if (rc != NcResultCode.Ok)
        {
            return $"last_error unavailable: {rc}";
        }

        var recoverable = err.Recoverable == 0 ? "fatal" : "recoverable";
        return $"{err.Code} [{err.Subsystem}] {err.Message} ({recoverable})";
    }

    public static NcRenderQualityOptions BuildBroadcastPreset()
    {
        return new NcRenderQualityOptions
        {
            CameraMode = NcCameraMode.AutoFitBust,
            FramingTarget = 0.80f,
            Headroom = 0.10f,
            YawDeg = 0.0f,
            FovDeg = 40.0f,
            BackgroundR = 0.55f,
            BackgroundG = 0.55f,
            BackgroundB = 0.55f,
            BackgroundA = 1.0f,
            QualityProfile = (uint)NcRenderQualityProfile.Balanced,
            ShowDebugOverlay = 0U,
        };
    }

    public static NcRenderQualityOptions BuildDebugPreset()
    {
        var options = BuildBroadcastPreset();
        options.ShowDebugOverlay = 1U;
        return options;
    }

    public static NcRenderQualityOptions BuildUltraParityPreset()
    {
        var options = BuildBroadcastPreset();
        options.QualityProfile = (uint)NcRenderQualityProfile.UltraParity;
        options.FovDeg = 42.0f;
        options.Headroom = 0.10f;
        options.ShowDebugOverlay = 0U;
        return options;
    }

    public static NcRenderQualityOptions BuildFastFallbackPreset()
    {
        var options = BuildBroadcastPreset();
        options.QualityProfile = (uint)NcRenderQualityProfile.FastFallback;
        options.FovDeg = 45.0f;
        options.Headroom = 0.12f;
        options.ShowDebugOverlay = 0U;
        return options;
    }

    public static NcLightingOptions BuildVsfRealtimeShadowPreset()
    {
        return new NcLightingOptions
        {
            LightPositionX = -0.72f,
            LightPositionY = 19.35f,
            LightPositionZ = 3.7f,
            LightEulerPitchDeg = 19.201f,
            LightEulerYawDeg = 175.0f,
            LightEulerRollDeg = 2.582f,
            Intensity = 12.5f,
            Range = 16.4f,
            SpotAngleDeg = 16.6f,
            InnerSpotAngleDeg = 0.0f,
            ShadowStrength = 1.0f,
            ShadowBias = 0.1f,
            ShadowNormalBias = 0.0f,
            ShadowNearPlane = 8.5f,
            ShadowResolution = 8192U,
            AmbientIntensity = 1.0f,
            EnableSunLight = 0U,
            EnableShadow = 1U,
        };
    }

    public static string FormatSpoutBackend(uint backendKind)
    {
        return backendKind switch
        {
            (uint)NcSpoutBackendKind.Spout2Gpu => "spout2-gpu",
            (uint)NcSpoutBackendKind.LegacySharedMemory => "legacy-shared-memory",
            _ => "inactive",
        };
    }

    public static string GetLoadedNativeCorePath()
    {
        var module = GetModuleHandleW(DllName);
        if (module == IntPtr.Zero)
        {
            return string.Empty;
        }

        var sb = new StringBuilder(MaxModulePathChars);
        var len = GetModuleFileNameW(module, sb, sb.Capacity);
        if (len == 0U)
        {
            return string.Empty;
        }

        return sb.ToString();
    }

    public static string GetLoadedNativeCoreTimestampUtc()
    {
        var path = GetLoadedNativeCorePath();
        if (string.IsNullOrWhiteSpace(path) || !File.Exists(path))
        {
            return string.Empty;
        }

        try
        {
            return File.GetLastWriteTimeUtc(path).ToString("O");
        }
        catch
        {
            return string.Empty;
        }
    }
}
